--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "typecheck": "tsc --noEmit -p tsconfig.app.json"
   },
   "dependencies": {
+    "@supabase/supabase-js": "^2.93.3",
     "i18next": "^25.7.3",
     "lucide-react": "^0.344.0",
     "react": "^18.3.1",
